trying to stop canvas from getting blurred

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -33,8 +33,7 @@ h1 {
 
 .frmwrks-logo-points-module {
 	canvas {
-		width: 100px;
-		height: 100px;
+
 	}
 }
 
